--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@styled-icons/material-outlined": "^10.47.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.28.0",
     "styled-components": "^6.1.12"
   },
   "devDependencies": {
